# tbai

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  justfile  pixi.toml  ruff.toml  tbai.bash  tbai2.bash  vcpkg-configuration.json  vcpkg.json
tbai_bob/: CMakeLists.txt
tbai_bob/include/tbai_bob/: BobController.hpp  BobState.hpp  CentralPatternGenerator.hpp  InverseKinematics.hpp  State.hpp
tbai_bob/src/: BobController.cpp  CentralPatternGenerator.cpp  InverseKinematics.cpp
tbai_core/: CMakeLists.txt
tbai_core/include/tbai_core/: Args.hpp  Asserts.hpp  Env.hpp  Files.hpp  Logging.hpp  ResourceMonitor.hpp  Rotations.hpp  Throws.hpp  Types.hpp  Utils.hpp
tbai_core/src/: Env.cpp  Files.cpp  Logging.cpp  ResourceMonitor.cpp  Utils.cpp
tbai_core/src/control/: CentralController.cpp
tbai_core/tests/: CMakeLists.txt
tbai_core/tests/src/: tbai_core_test.cpp  test_config.cpp  test_env.cpp  test_rate.cpp  test_utils.cpp
tbai_deploy_g1/: CMakeLists.txt
tbai_deploy_g1/include/tbai_deploy_g1/: G1BeyondMimicController.hpp  G1Constants.hpp  G1MimicController.hpp  G1RLController.hpp  G1RobotInterface.hpp  G1SpinkickController.hpp  MotionLoader.hpp
tbai_deploy_g1/src/: G1BeyondMimicController.cpp  G1MimicController.cpp  G1RLController.cpp  G1RobotInterface.cpp  G1SpinkickController.cpp  MotionLoader.cpp
tbai_deploy_go2/: CMakeLists.txt
tbai_deploy_go2/include/tbai_deploy_go2/: Gamepad.hpp  Go2JoystickInterface.hpp  Go2RobotInterface.hpp
tbai_deploy_go2/src/: Go2JoystickInterface.cpp  Go2RobotInterface.cpp  main.cpp  main2.cpp  test_lidar.cpp  test_stand_sit_tbai.cpp
tbai_deploy_go2w/: CMakeLists.txt
tbai_deploy_go2w/include/tbai_deploy_go2w/: Go2WConstants.hpp  Go2WDreamWaQController.hpp  Go2WRobotInterface.hpp
tbai_deploy_go2w/src/: Go2WDreamWaQController.cpp  Go2WRobotInterface.cpp
tbai_dtc/: CMakeLists.txt
tbai_dtc/include/tbai_dtc/: DtcController.hpp
tbai_dtc/src/: DtcController.cpp
tbai_estim/: CMakeLists.txt  README.md
tbai_estim/src/: main.cpp
tbai_estim/src/inekf/: InEKF.cpp  InEKFEstimator.cpp  LieGroup.cpp  NoiseParams.cpp  RobotState.cpp
tbai_estim/src/muse/: MuseEstimator.cpp
tbai_g1_rl/: CMakeLists.txt
tbai_g1_rl/include/tbai_g1_rl/: G1RlController.hpp  HistoryBuffer.hpp  State.hpp
tbai_g1_rl/src/: G1RlController.cpp  HistoryBuffer.cpp
tbai_g1_rl/tests/: CMakeLists.txt
tbai_g1_rl/tests/src/: test_history_buffer.cpp
tbai_joe/: CMakeLists.txt
tbai_joe/include/tbai_joe/: JoeController.hpp
tbai_joe/src/: JoeController.cpp
tbai_mpc/: CMakeLists.txt
tbai_mpc/config/franka/: task.info
tbai_mpc/include/tbai_mpc/: MpcController.hpp
tbai_mpc/src/: MpcController.cpp
tbai_mpc/src/arm_mpc/: ArmInterface.cpp  ArmPinocchioMapping.cpp  ArmPreComputation.cpp  FactoryFunctions.cpp
tbai_mpc/src/arm_wbc/: Factory.cpp  HqpWbc.cpp  SqpWbc.cpp  WbcBase.cpp
tbai_mpc/src/franka_mpc/: FactoryFunctions.cpp  FrankaInterface.cpp  FrankaPinocchioMapping.cpp  FrankaPreComputation.cpp  MobileManipulatorInterface.cpp  MobileManipulatorPinocchioMapping.cpp  MobileManipulatorPreComputation.cpp
tbai_mpc/src/franka_wbc/: Factory.cpp  HqpWbc.cpp  SqpWbc.cpp  WbcBase.cpp
tbai_mpc/src/quadruped_arm_mpc/: MpcController.cpp  QuadrupedInterface.cpp  QuadrupedMpc.cpp  QuadrupedPointfootInterface.cpp
tbai_mpc/src/quadruped_arm_wbc/: Factory.cpp  HqpWbc.cpp  SqpWbc.cpp  WbcBase.cpp
tbai_mpc/src/quadruped_mpc/: MpcController.cpp  QuadrupedInterface.cpp  QuadrupedMpc.cpp  QuadrupedPointfootInterface.cpp
tbai_mpc/src/quadruped_wbc/: Factory.cpp  HqpWbc.cpp  SqpWbc.cpp  WbcBase.cpp
tbai_mpc/src/reference/: LocalTerrainEstimator.cpp  ReferenceTrajectoryGenerator.cpp
tbai_mpc/src/wbc/: Factory.cpp  HqpSolver.cpp  HqpWbc.cpp  SqpSolver.cpp  SqpWbc.cpp  Task.cpp  WbcBase.cpp
tbai_mpc_blind/: package.xml
tbai_mpc_blind/config/: default_config.yaml
tbai_mpc_blind/launch/: simple.launch
tbai_muse/: CMakeLists.txt
tbai_muse/include/tbai_muse/: EKF.hpp  EigenExtra.hpp  Estimator.hpp  Observer.hpp  SensorFusion.hpp  TbaiEstimator.hpp  lib.hpp  sensor_fusion.hpp
tbai_muse/src/: TbaiEstimator.cpp  main.cpp
tbai_np3o/: CMakeLists.txt
tbai_np3o/include/tbai_np3o/: EigenTorch.hpp  HistoryBuffer.hpp  Np3oController.hpp  State.hpp
tbai_np3o/src/: HistoryBuffer.cpp  Np3oController.cpp
tbai_np3o/tests/: CMakeLists.txt
tbai_np3o/tests/src/: test_eigentorch.cpp  test_history_buffer.cpp
tbai_ocs2/: CMakeLists.txt  LICENSE.txt
tbai_ocs2/cmake/: ocs2Config.cmake.in
tbai_ocs2/ocs2_core/: CMakeLists.txt
tbai_ocs2/ocs2_core/cmake/: ocs2_cxx_flags.cmake
tbai_ocs2/ocs2_core/misc/: BugReportTest.cpp
tbai_ocs2/ocs2_core/src/: Types.cpp  lintTarget.cpp
tbai_ocs2/ocs2_core/test/: testPrecomputation.cpp  testTypes.cpp
tbai_ocs2/ocs2_ddp/: CMakeLists.txt
tbai_ocs2/ocs2_ddp/src/: ContinuousTimeLqr.cpp  DDP_DataCollector.cpp  DDP_HelperFunctions.cpp  DDP_Settings.cpp  GaussNewtonDDP.cpp  ILQR.cpp  (+3 more)
tbai_ocs2/ocs2_frank_wolfe/: CMakeLists.txt
tbai_ocs2/ocs2_ipm/: CMakeLists.txt
tbai_ocs2/ocs2_mpc/: CMakeLists.txt
tbai_ocs2/ocs2_oc/: CMakeLists.txt
tbai_ocs2/ocs2_ocs2/: CMakeLists.txt
tbai_ocs2/ocs2_perceptive/: CMakeLists.txt
tbai_ocs2/ocs2_pinocchio/: CMakeLists.txt
tbai_ocs2/ocs2_qp_solver/: CMakeLists.txt
tbai_ocs2/ocs2_robotic_tools/: CMakeLists.txt
tbai_ocs2/ocs2_slp/: CMakeLists.txt
tbai_ocs2/ocs2_sqp/: CMakeLists.txt
tbai_ocs2/ocs2_thirdparty/: CMakeLists.txt
tbai_python/: CMakeLists.txt  README.md  requirements.txt  test.py
tbai_python/src/: Controllers.cpp  bindings.cpp
tbai_reference/: CMakeLists.txt
tbai_safe/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tbai_safe/.conda/: tbai-safe-gpu-free.yaml  tbai-safe.yaml
tbai_safe/tests/: test_cbf_new.py  test_control.py  test_systems.py  test_utils.py
tbai_static/: CMakeLists.txt
tbai_static/src/: StaticController.cpp
tbai_torch/: CMakeLists.txt
tbai_torch/tests/: CMakeLists.txt
tbai_wtw/: CMakeLists.txt
tbai_wtw/src/: HistoryBuffer.cpp  HistoryWrapper.cpp  WtwController.cpp
tbai_wtw/tests/: CMakeLists.txt
(+1256 files in other folders)
